--- a/MECApp/package.json
+++ b/MECApp/package.json
@@ -24,8 +24,13 @@
     "@angular/platform-browser-dynamic": "^4.0.2",
     "@angular/platform-server": "^4.0.2",
     "@angular/router": "^4.0.2",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "echarts": "^3.5.3",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
+    "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
     "typescript": "^2.2.2",
     "zone.js": "^0.8.4"
@@ -41,9 +46,10 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
