--- a/MECApp/package.json
+++ b/MECApp/package.json
@@ -30,6 +30,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "moment": "^2.18.1",
     "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
     "typescript": "^2.2.2",
