--- a/App/package.json
+++ b/App/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "^4.1.3",
     "@angular/router": "^4.1.3",
     "bootstrap": "^3.3.7",
+    "bootstrap-table": "^1.11.2",
     "core-js": "^2.4.1",
     "echarts": "^3.5.3",
     "font-awesome": "^4.7.0",
