--- a/App/package.json
+++ b/App/package.json
@@ -36,7 +36,7 @@
     "ngx-bootstrap": "^1.6.6",
     "node-sass": "^4.5.3",
     "rxjs": "^5.1.0",
-    "typescript": "^2.3.4",
+    "typescript": "2.3.4",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
