--- a/App/package.json
+++ b/App/package.json
@@ -12,18 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/material": "2.0.0-beta.7",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/platform-server": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/animations": "^4.3.2",
+    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/common": "^4.3.2",
+    "@angular/compiler": "^4.3.2",
+    "@angular/compiler-cli": "^4.3.2",
+    "@angular/core": "^4.3.2",
+    "@angular/forms": "^4.3.2",
+    "@angular/http": "^4.3.2",
+    "@angular/material": "^2.0.0-beta.8",
+    "@angular/platform-browser": "^4.3.2",
+    "@angular/platform-browser-dynamic": "^4.3.2",
+    "@angular/platform-server": "^4.3.2",
+    "@angular/router": "^4.3.2",
     "angular-in-memory-web-api": "^0.3.2",
     "bootstrap": "^3.3.7",
     "bootstrap-table": "^1.11.2",
@@ -35,14 +36,14 @@
     "moment": "^2.18.1",
     "ngx-bootstrap": "^1.6.6",
     "node-sass": "^4.5.3",
-    "rxjs": "^5.1.0",
-    "typescript": "2.3.4",
+    "rxjs": "^5.4.2",
+    "typescript": "^2.4.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "^1.1.3",
     "@angular/compiler-cli": "^4.0.2",
-    "@types/jasmine": "2.5.38",
+    "@types/jasmine": "~2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
