--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ before_install:
 
 install:
   - cd App/
-  - npm install
+  - npm install -g cnpm --registry=https://registry.npm.taobao.org 
+  - cnpm install node-sass
+  - cnpm install
 
 script:
   - npm run build
