--- a/App/package.json
+++ b/App/package.json
@@ -34,6 +34,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
+    "ng-zorro-antd": "^0.5.2",
     "ngx-bootstrap": "^1.8.1",
     "node-sass": "^4.5.3",
     "rxjs": "^5.4.2",
