--- a/App/package.json
+++ b/App/package.json
@@ -13,14 +13,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.4.3",
-    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/cdk": "2.0.0-beta.8",
     "@angular/common": "^4.4.3",
     "@angular/compiler": "^4.4.3",
     "@angular/compiler-cli": "^4.4.3",
     "@angular/core": "^4.4.3",
     "@angular/forms": "^4.4.3",
     "@angular/http": "^4.4.3",
-    "@angular/material": "^2.0.0-beta.8",
+    "@angular/material": "2.0.0-beta.8",
     "@angular/platform-browser": "^4.4.3",
     "@angular/platform-browser-dynamic": "^4.4.3",
     "@angular/platform-server": "^4.4.3",
@@ -34,7 +34,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
-    "ng-zorro-antd": "^0.5.1",
+    "ng-zorro-antd": "0.5.1",
     "ngx-bootstrap": "^1.9.3",
     "node-sass": "^4.5.3",
     "rxjs": "^5.4.2",
