--- a/App/package.json
+++ b/App/package.json
@@ -20,7 +20,7 @@
     "@angular/core": "^4.4.3",
     "@angular/forms": "^4.4.3",
     "@angular/http": "^4.4.3",
-    "@angular/material": "^2.0.0-beta.8",
+    "@angular/material": "2.0.0-beta.8",
     "@angular/platform-browser": "^4.4.3",
     "@angular/platform-browser-dynamic": "^4.4.3",
     "@angular/platform-server": "^4.4.3",
