--- a/App/package.json
+++ b/App/package.json
@@ -12,19 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.3",
-    "@angular/cdk": "2.0.0-beta.8",
-    "@angular/common": "^4.4.3",
-    "@angular/compiler": "^4.4.3",
-    "@angular/compiler-cli": "^4.4.3",
-    "@angular/core": "^4.4.3",
-    "@angular/forms": "^4.4.3",
-    "@angular/http": "^4.4.3",
-    "@angular/material": "2.0.0-beta.8",
-    "@angular/platform-browser": "^4.4.3",
-    "@angular/platform-browser-dynamic": "^4.4.3",
-    "@angular/platform-server": "^4.4.3",
-    "@angular/router": "^4.4.3",
+    "@angular/animations": "^4.4.4",
+    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/common": "^4.4.4",
+    "@angular/compiler": "^4.4.4",
+    "@angular/compiler-cli": "^4.4.4",
+    "@angular/core": "^4.4.4",
+    "@angular/forms": "^4.4.4",
+    "@angular/http": "^4.4.4",
+    "@angular/material": "^2.0.0-beta.8",
+    "@angular/platform-browser": "^4.4.4",
+    "@angular/platform-browser-dynamic": "^4.4.4",
+    "@angular/platform-server": "^4.4.4",
+    "@angular/router": "^4.4.4",
     "angular-in-memory-web-api": "^0.3.2",
     "bootstrap": "^3.3.7",
     "bootstrap-table": "^1.11.2",
@@ -34,11 +34,11 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
-    "ng-zorro-antd": "0.5.1",
+    "ng-zorro-antd": "^0.5.1",
     "ngx-bootstrap": "^1.9.3",
     "node-sass": "^4.5.3",
     "rxjs": "^5.4.2",
-    "typescript": "^2.5.2",
+    "typescript": "^2.5.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
