--- a/App/package.json
+++ b/App/package.json
@@ -12,20 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.4",
-    "@angular/cdk": "2.0.0-beta.8",
-    "@angular/common": "^4.4.4",
-    "@angular/compiler": "^4.4.4",
-    "@angular/compiler-cli": "^4.4.4",
-    "@angular/core": "^4.4.4",
-    "@angular/forms": "^4.4.4",
-    "@angular/http": "^4.4.4",
-    "@angular/material": "2.0.0-beta.8",
-    "@angular/platform-browser": "^4.4.4",
-    "@angular/platform-browser-dynamic": "^4.4.4",
-    "@angular/platform-server": "^4.4.4",
-    "@angular/router": "^4.4.4",
-    "angular-in-memory-web-api": "^0.3.2",
+    "@angular/animations": "^5.1.0",
+    "@angular/cdk": "^5.0.1",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/compiler-cli": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/http": "^5.1.0",
+    "@angular/material": "^5.0.1",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/platform-server": "^5.1.0",
+    "@angular/router": "^5.1.0",
     "bootstrap": "^3.3.7",
     "bootstrap-table": "^1.11.2",
     "core-js": "^2.4.1",
@@ -34,15 +33,15 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
-    "ng-zorro-antd": "0.5.3",
-    "ngx-bootstrap": "^1.9.3",
+    "ng-zorro-antd": "^0.6.6",
+    "ngx-bootstrap": "^2.0.0-beta.11",
     "node-sass": "^4.5.3",
-    "rxjs": "^5.4.2",
-    "typescript": "^2.5.3",
+    "rxjs": "^5.5.5",
+    "typescript": "^2.4.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.3",
+    "@angular/cli": "^1.6.0",
     "@angular/compiler-cli": "^4.0.2",
     "@types/jasmine": "~2.5.38",
     "@types/node": "~6.0.60",
