--- a/App/package.json
+++ b/App/package.json
@@ -13,19 +13,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
-    "@angular/cdk": "^5.0.1",
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/material": "^5.0.1",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/platform-server": "^5.1.0",
-    "@angular/router": "^5.1.0",
+    "@angular/animations": "^6.1.0-beta.2",
+    "@angular/cdk": "^6.3.1",
+    "@angular/common": "^6.1.0-beta.2",
+    "@angular/compiler": "^6.1.0-beta.2",
+    "@angular/compiler-cli": "^6.1.0-beta.2",
+    "@angular/core": "^6.1.0-beta.2",
+    "@angular/forms": "^6.1.0-beta.2",
+    "@angular/http": "^6.1.0-beta.2",
+    "@angular/material": "^6.3.1",
+    "@angular/platform-browser": "^6.1.0-beta.2",
+    "@angular/platform-browser-dynamic": "^6.1.0-beta.2",
+    "@angular/platform-server": "^6.1.0-beta.2",
+    "@angular/router": "^6.1.0-beta.2",
     "@ngx-translate/core": "^9.0.1",
     "@ngx-translate/http-loader": "^2.0.0",
     "bootstrap": "^3.3.7",
@@ -38,14 +38,14 @@
     "moment": "^2.18.1",
     "ng-zorro-antd": "^0.6.6",
     "ngx-bootstrap": "^2.0.0-beta.11",
-    "node-sass": "^4.5.3",
-    "rxjs": "^5.5.5",
-    "typescript": "^2.4.2",
-    "zone.js": "^0.8.4"
+    "node-sass": "^4.9.0",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "typescript": "^2.7.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.0",
-    "@angular/compiler-cli": "^4.0.2",
+    "@angular/cli": "^6.0.8",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@types/jasmine": "~2.5.38",
     "@types/node": "~6.0.60",
@@ -62,6 +62,6 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "@angular-devkit/build-angular": "~0.6.8"
   }
 }
