--- a/App/angular.json
+++ b/App/angular.json
@@ -25,6 +25,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
               "node_modules/bootstrap-table/dist/bootstrap-table.min.css"
             ],
             "scripts": [
