--- a/App/package.json
+++ b/App/package.json
@@ -36,10 +36,11 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
-    "ng-zorro-antd": "^0.6.6",
+    "ng-zorro-antd": "^1.1.0",
     "ngx-bootstrap": "^2.0.0-beta.11",
     "node-sass": "^4.9.0",
     "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "typescript": "^2.7.2",
     "zone.js": "^0.8.26"
   },
