--- a/App/package.json
+++ b/App/package.json
@@ -26,8 +26,8 @@
     "@angular/platform-browser-dynamic": "^6.1.0-beta.2",
     "@angular/platform-server": "^6.1.0-beta.2",
     "@angular/router": "^6.1.0-beta.2",
-    "@ngx-translate/core": "^9.0.1",
-    "@ngx-translate/http-loader": "^2.0.0",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
     "bootstrap": "^3.3.7",
     "bootstrap-table": "^1.11.2",
     "core-js": "^2.4.1",
@@ -37,7 +37,7 @@
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "ng-zorro-antd": "^1.1.0",
-    "ngx-bootstrap": "^2.0.0-beta.11",
+    "ngx-bootstrap": "^3.0.1",
     "node-sass": "^4.9.0",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
