--- a/App/angular.json
+++ b/App/angular.json
@@ -54,6 +54,14 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ]
+            },
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
+              ]
             }
           }
         },
@@ -65,6 +73,10 @@
           "configurations": {
             "production": {
               "browserTarget": "App:build:production"
+            },
+            "hmr": {
+              "hmr": true,
+              "browserTarget": "App:build:hmr"
             }
           }
         },
