--- a/App/package.json
+++ b/App/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open --port 4200 --host 0.0.0.0 --disable-host-check --proxy-config proxy.conf.json --base-href /Angular-cli-starter",
+    "start": "ng serve --open --port 4200 --host 0.0.0.0 --proxy-config proxy.conf.json --base-href /Angular-cli-starter",
     "build": "ng build --prod --aot --base-href /Angular-cli-starter/",
+    "hmr": "ng serve --configuration hmr --open --port 4200 --host 0.0.0.0 --proxy-config proxy.conf.json --base-href /Angular-cli-starter",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -44,7 +45,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.0.8",
+    "@angularclass/hmr": "^2.1.3",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@types/jasmine": "~2.5.38",
     "@types/node": "~6.0.60",
@@ -60,7 +63,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "tslint": "~4.5.0"
   }
 }
