--- a/App/package.json
+++ b/App/package.json
@@ -14,19 +14,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0-beta.2",
+    "@angular/animations": "^7.0.0",
     "@angular/cdk": "^6.3.1",
-    "@angular/common": "^6.1.0-beta.2",
-    "@angular/compiler": "^6.1.0-beta.2",
-    "@angular/compiler-cli": "^6.1.0-beta.2",
-    "@angular/core": "^6.1.0-beta.2",
-    "@angular/forms": "^6.1.0-beta.2",
-    "@angular/http": "^6.1.0-beta.2",
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/compiler-cli": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/forms": "^7.0.0",
+    "@angular/http": "^7.0.0",
     "@angular/material": "^6.3.1",
-    "@angular/platform-browser": "^6.1.0-beta.2",
-    "@angular/platform-browser-dynamic": "^6.1.0-beta.2",
-    "@angular/platform-server": "^6.1.0-beta.2",
-    "@angular/router": "^6.1.0-beta.2",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@angular/platform-server": "^7.0.0",
+    "@angular/router": "^7.0.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "bootstrap": "^3.3.7",
@@ -40,18 +40,18 @@
     "ng-zorro-antd": "^1.1.0",
     "ngx-bootstrap": "^3.0.1",
     "node-sass": "^4.9.3",
-    "rxjs": "^6.2.1",
-    "typescript": "^2.7.2",
+    "rxjs": "^6.3.3",
+    "typescript": "^3.1.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "^6.0.8",
+    "@angular/cli": "^7.0.2",
     "@angularclass/hmr": "^2.1.3",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@types/jasmine": "~2.5.38",
     "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
+    "codelyzer": "~4.5.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
@@ -63,6 +63,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0"
+    "tslint": "~5.11.0"
   }
 }
