--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ branches:
   only:
   - master
 
+services:
+  - xvfb
+  
 before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
